--- a/style.css
+++ b/style.css
@@ -118,6 +118,58 @@ header {
     margin-bottom: 20px;
 }
 
+/* TITULOS DEL FORMULARIO DE REGISTRO */
+
+#t1 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #726a95; /* Color pastel para el texto */
+}
+#t2{
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    border-radius: 20px;
+}
+
+/* FORMULARIO DE REGISTRO */
+form {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0e8d8; /* Color pastel de fondo */
+    padding: 30px;
+    border-radius: 20px;
+  }
+  
+  label {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #726a95; /* Color pastel para el texto */
+  }
+  
+  input {
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #c5b6a5; /* Color pastel para el borde */
+    width: 100%;
+    background-color: #f9f3e9; /* Color pastel para el fondo de los campos de entrada */
+    color: #4d4d4d; /* Color de texto para los campos de entrada */
+  }
+
+/* BOTONES DE LLAMDA Y DE REGISTRO  */
+
 .boton {
     background: linear-gradient(to bottom, #9f9aff 0%, #090965 100%);
     border: none;
@@ -128,18 +180,45 @@ header {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease-in-out;
   }
+
+.botonR{
+    background: linear-gradient(to bottom, #9f9aff 0%, #090965 100%);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 30px;
+    font-size: 18px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    transition: all 0.3s ease-in-out;
+}
+
+.containerB {
+    display: flex;
+    justify-content: center; /* Ajusta la alineación horizontal */
+  }
+  
+  .boton, .botonR {
+    margin: 15px; /* Margen opcional entre los botones */
+  }
+  
   
   .boton:hover {
     transform: translateY(-2px);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
-  
 
+  .botonR:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  
+/* NUESTROS SERVICIOS */
 .n-service{
     margin-bottom: 7px;
     color: #9f8ad0;
 }
 
+/* NUMERALES DE SERVICIOS  */
 .number{
     display: inline-block;
     background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
